scripts + fix dockercompose

--- a/lab_3/docker-compose.yml
+++ b/lab_3/docker-compose.yml
@@ -11,6 +11,8 @@ services:
     command: [
       "/scripts/setup.sh"
     ]
+    volumes:
+      - ./attacker/scripts/sh:/scripts/setup.sh
 
   victim-activemq:
     image: vulhub/activemq:5.16.5
