--- a/lab_3/docker-compose.yml
+++ b/lab_3/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       "/scripts/setup.sh"
     ]
     volumes:
-      - ./attacker/scripts/sh:/scripts/setup.sh
+      - attacker/scripts/sh:/scripts/setup.sh
 
   victim-activemq:
     image: vulhub/activemq:5.16.5
