change image to attacker

--- a/lab_3/docker-compose.yml
+++ b/lab_3/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   attacker:
-    image: kalilinux/kali-rolling:latest
+    image: ubuntu:noble
     container_name: attacker
     hostname: attacker
     networks:
