--- a/lab_3/docker-compose.yml
+++ b/lab_3/docker-compose.yml
@@ -8,6 +8,7 @@ services:
         ipv4_address: 172.20.0.10
     stdin_open: true
     tty: true
+    user: root
     command: [
       "/scripts/setup.sh"
     ]
