--- a/lab_3/docker-compose.yml
+++ b/lab_3/docker-compose.yml
@@ -29,6 +29,14 @@ services:
       DJANGO_SUPERUSER_USERNAME: admin
       DJANGO_SUPERUSER_PASSWORD: admin
       DJANGO_SUPERUSER_EMAIL: admin@example.com
+    command: >
+      sh -c "
+      python manage.py migrate &&
+      python manage.py createsuperuser --noinput --username admin --email admin@example.com &&
+      python manage.py runserver 0.0.0.0:8000
+      "
+    stdin_open: true
+    tty: true
 
 volumes:
   minio_data1:
